--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,6 +14,7 @@
     "cluster": "^0.7.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.1",
     "os": "^0.1.2"
   }
